--- a/app/src/main/res/layout/constraint_test.xml
+++ b/app/src/main/res/layout/constraint_test.xml
@@ -27,4 +27,58 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#e0e0e0"
+
+        android:text="Hello Android"
+
+        android:textSize="30sp"
+        app:layout_constraintDimensionRatio="W, 1:4"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#efefef"
+        android:text="First"
+        android:textSize="30sp"
+
+        app:layout_constraintHorizontal_weight="1"
+
+        app:layout_constraintRight_toLeftOf="@id/textView2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#e0e0e0"
+        android:text="Second"
+        android:textSize="30sp"
+
+        app:layout_constraintHorizontal_weight="2"
+
+        app:layout_constraintLeft_toRightOf="@id/textView1"
+        app:layout_constraintRight_toLeftOf="@id/textView3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#efefef"
+        android:text="Third"
+        android:textSize="30sp"
+
+        app:layout_constraintHorizontal_weight="1"
+
+        app:layout_constraintLeft_toRightOf="@id/textView2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
