--- a/app/src/main/res/layout/outer_layout.xml
+++ b/app/src/main/res/layout/outer_layout.xml
@@ -7,7 +7,13 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context=".MainActivity">
-
+    <TextView
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="слева"
+        android:gravity="right"
+    />
     <include
         layout="@layout/inner_layout_text"
         android:layout_width="wrap_content"
