--- a/app/src/main/res/layout/array_adapter_testing.xml
+++ b/app/src/main/res/layout/array_adapter_testing.xml
@@ -14,6 +14,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <ListView
+        android:choiceMode="multipleChoice"
         android:id="@+id/countriesList"
         android:layout_width="0dp"
         android:layout_height="0dp"
