--- a/app/src/main/res/layout/two_fragments_communication.xml
+++ b/app/src/main/res/layout/two_fragments_communication.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/listFragment"
         android:layout_width="0dp"
@@ -12,16 +12,16 @@
         android:name="com.example.myapplication.ListFragment"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/detailFragment"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toLeftOf="@id/detailFragment"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/detailFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:name="com.example.myapplication.DetailFragment"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/listFragment"
+        app:layout_constraintLeft_toRightOf="@id/listFragment"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
