--- a/app/src/main/res/layout/finder_layout.xml
+++ b/app/src/main/res/layout/finder_layout.xml
@@ -24,4 +24,16 @@
         app:layout_constraintTop_toBottomOf="@+id/userFilter"
         />
 
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:text="Добавить"
+        android:onClick="add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
