--- a/app/src/main/res/layout/activity_content_view.xml
+++ b/app/src/main/res/layout/activity_content_view.xml
@@ -5,6 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:id="@+id/newContact"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/header"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/addBtn"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/addBtn"
+        android:text="Add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onAddContact"
+        app:layout_constraintBottom_toTopOf="@id/header"
+        app:layout_constraintLeft_toRightOf="@id/newContact"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/header"
         android:layout_width="0dp"
@@ -14,7 +33,7 @@
         app:layout_constraintBottom_toTopOf="@id/contactList"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/newContact" />
 
     <ListView
         android:id="@+id/contactList"
